# Resiply

./: README.md  env.example  package-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: data_embedding.py  database.py  jwt_token.py  main.py  models.py
backend/app/data/: READMA.md  classified_food.json  filter_single_detail_image.py  filtered_product_data.csv  ingredient_data.csv  insert_categories.py  insert_cookingtips.py  insert_mf_data.py  insert_products.py  members.csv  mf_data.py  product_data_merged.csv  ratings.csv  recipe_data.csv
backend/app/data_scripts/: 10000recipe_magazine_20260113_110503.csv  10000recipe_result_20260113_110513.csv  crawling_10000recipe_tip.ipynb  data_10000recipe.csv  data_classified_food.json  data_embedding.py  data_insert.ipynb  data_insert.py  product_data.csv  test.json
backend/app/mf_services/: mf_experiment.py  mf_model.npz  mf_recommend.py  mf_services.py
backend/app/routers/: categories.py  cookingtips.py  kakao.py  mf_recommend.py  mypage.py  order.py  product.py  recipe.py  recipe_bookmark.py  recommendations.py  review.py  search.py  wishlist.py
backend/app/schemas/: category.py  cookingtips.py  mypage.py  order.py  product.py  recipe.py  recommendations.py  review.py  user.py  wishlist.py
docs/: agent-flow.md
frontend/: Dockerfile  default.conf  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: axios.ts  chat.ts  cookingtips.ts  mypage.ts  order.ts  product.ts  (+5 more)
(+52 files in other folders)
