[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and Web Framework
    "fastapi[standard]>=0.115.7,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    # Database
    "sqlalchemy>=2.0.23,<2.1.0",
    "alembic>=1.13.1,<2.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "redis>=5.0.1,<6.0.0",
    # PostgreSQL Driver
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.4.0,<0.5.0",
    # Security / Password Handling
    "passlib[bcrypt]>=1.7.4",
    # Validation / Settings
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    # JWT Token
    "python-jose>=3.3.0",
    # HTTP Client
    "httpx>=0.24.0",
    # Data Processing
    "pandas>=2.3.3",
    # LLM & LangGraph
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "langchain>=1.2.6",
    "langchain-community>=0.3.30",
    # VoyageAI
    "voyageai>=0.3.7",
    "konlpy>=0.6.0",
    "jpype1==1.5.0",
    "scikit-learn>=1.8.0",
    # ApsScheduler
    "apscheduler>=3.11.2",
]
